[package]
name = "chan-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP prompts and tool sandbox for chan workspaces"

[features]
default = []
# Enables the MCP server module and the `chan-llm-mcp` binary. Off
# by default so library consumers don't pull rmcp + its transitive
# deps unless they want the MCP transport.
mcp = ["dep:rmcp", "dep:schemars", "dep:base64"]

[dependencies]
chan-workspace = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

# `mcp` feature deps. rmcp's defaults already pull macros + server +
# transport-async-rw + schemars, which is everything we need for a
# stdio tool server. We also depend on schemars directly because the
# `JsonSchema` derive lives in user code (the params structs).
# base64 is used by `read_media` to encode binary media bytes for
# MCP image content and PDF blob resources.
base64 = { workspace = true, optional = true }
rmcp = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[lib]
name = "chan_llm"
crate-type = ["lib"]

# Standalone MCP server binary. Any MCP client (Claude Desktop,
# Claude Code, Cursor, ...) can spawn this process to get
# chan-workspace-sandboxed read/write/list/search access to a chan
# workspace. `auto_apply_writes` defaults to false here; the MCP client
# is expected to surface a confirmation UI before flipping the
# `--auto-apply` flag on. Safer default than forcing it on, since a
# hostile or buggy client otherwise gets through-without-prompt
# write access the first time the user spawns the binary.
[[bin]]
name = "chan-llm-mcp"
path = "src/bin/chan-llm-mcp.rs"
required-features = ["mcp"]
