[package]
name = "chan-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP + WebSocket surface for chan, wrapping chan-drive in axum routes."

[lib]
name = "chan_server"

[features]
default = ["embeddings"]
# Forwards to chan-drive's `embeddings` feature so the about-pane's
# "embeddings on" badge reflects the actual build. Opt out via
# `--no-default-features` along the rest of the stack.
embeddings = ["chan-drive/embeddings"]
# Bundle the default BGE-small model into the binary via
# `include_bytes!`. Opt-in (default-off) so a plain `cargo build`
# produces a ~26 MB binary instead of ~89 MB. With the feature off
# the chan-drive runtime resolver looks for the model under
# `<user-config>/chan/models/<model-name>/`; the CLI / API layer
# (systacean-7) downloads it on demand. With the feature on
# `make models` prefetches the tarball into
# `resources/models.tar.zst` and the seeder extracts it into the
# per-machine cache on first server launch. Implies `embeddings`:
# bundling a model is meaningless without the embedding code.
embed-model = ["embeddings", "dep:tar", "dep:zstd"]
# Pass-throughs for chan-drive's GPU backends. The chan binary's
# target-conditional dep wiring auto-flips `metal` on macOS; `cuda`
# stays opt-in on Linux.
metal = ["chan-drive/metal"]
cuda = ["chan-drive/cuda"]

[dependencies]
chan-drive = { workspace = true, default-features = false }
tar = { workspace = true, optional = true }
zstd = { workspace = true, optional = true }
chan-llm = { workspace = true, features = ["mcp"] }
chan-tunnel-client = { workspace = true }
chan-tunnel-proto = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
notify = { workspace = true }
open = "5"
percent-encoding = "2"
portable-pty = "0.8"
qrcode = { version = "0.14", default-features = false }
rand = "0.8"
rust-embed = "8"
tokio = { workspace = true }
toml = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = "2"

[dev-dependencies]
tempfile = { workspace = true }
