[package]
name = "chan-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP + WebSocket surface for chan, wrapping chan-workspace in axum routes."

[lib]
name = "chan_server"

[features]
default = ["embeddings"]
# Forwards to chan-workspace's `embeddings` feature so the about-pane's
# "embeddings on" badge reflects the actual build. Opt out via
# `--no-default-features` along the rest of the stack.
embeddings = ["chan-workspace/embeddings"]
# Bundle the default BGE-small model into the binary via
# `include_bytes!`. Opt-in (default-off) so a plain `cargo build`
# produces a ~26 MB binary instead of ~89 MB. With the feature off
# the chan-workspace runtime resolver looks for the model under
# `<user-config>/chan/models/<model-name>/`; the CLI / API layer
# (systacean-7) downloads it on demand. With the feature on
# `make models` prefetches the tarball into
# `resources/models.tar.zst` and the seeder extracts it into the
# per-machine cache on first server launch. Implies `embeddings`:
# bundling a model is meaningless without the embedding code.
embed-model = ["embeddings", "dep:zstd"]
# Bundle Source Code Pro Regular into the binary via rust-embed.
# Opt-in (default-off) so a plain `cargo build` produces a lean
# binary that uses the per-OS native mono font (SF Mono / Cascadia
# / DejaVu) by default. With the feature off `serve_font` falls
# back to a user-config-dir copy at
# `<user-config>/chan/fonts/SourceCodePro-Regular.otf.woff2`; the
# Settings UI's "Source Code Pro" opt-in downloads the woff2 +
# OFL.txt into that directory on enable (slice b follow-up).
# Implies nothing; the bundle is purely additive.
embed-font = []
# Pass-throughs for chan-workspace's GPU backends. The chan binary's
# target-conditional dep wiring auto-flips `metal` on macOS; `cuda`
# stays opt-in on Linux.
metal = ["chan-workspace/metal"]
cuda = ["chan-workspace/cuda"]

[dependencies]
chan-workspace = { workspace = true, default-features = false }
tar = { workspace = true }
zstd = { workspace = true, optional = true }
chan-llm = { workspace = true, features = ["mcp"] }
chan-tunnel-client = { workspace = true }
chan-tunnel-proto = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
notify = { workspace = true }
open = "5"
percent-encoding = "2"
portable-pty = "0.8"
qrcode = { version = "0.14", default-features = false }
rand = "0.8"
# `fullstack-b-30` slice b: HTTP client for the Source Code Pro
# download endpoint (`POST /api/fonts/source-code-pro/download`).
# Mirrors chan-tunnel-server / chan binary deps; rustls keeps the
# build OpenSSL-free.
reqwest = { workspace = true }
rust-embed = "8"
rustix = { version = "1.1", features = ["process"] }
tokio = { workspace = true }
toml = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = "2"
