[package]
name = "chan-shell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "chan: the `cs` control-socket client shared by chan and chan-desktop."
publish = false

[features]
# The `cs` CLIENT (clap surface + control-socket dispatch + the agent
# submit map). On by default for the `chan` / `chan-desktop` binaries;
# chan-server turns it OFF and pulls only the wire types
# (`ControlRequest` / `ControlResponse`), so the server does not link
# clap or the client transport.
default = ["client"]
client = ["dep:clap", "dep:tokio", "dep:serde_json", "dep:anyhow", "dep:toml", "dep:base64"]

[dependencies]
# The wire types are always available (serde only); everything else is
# behind the `client` feature so chan-server stays clap-free.
serde = { workspace = true }
clap = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
# Client-only: `cs terminal team new --mcp-env` sets the top-level `mcp_env`
# key in the forwarded config TOML. The key must land at the document root
# (before the `[[members]]` tables), so a parse + re-serialize is cleaner and
# safer than a line edit. The server links the wire types without this.
toml = { workspace = true, optional = true }
# Client-only: `cs copy` base64-encodes its stdin into the ClipboardCopy
# request and `cs paste` base64-decodes the reply to raw stdout. The bytes
# ride a JSON string on the control socket, so base64 is the byte-safe
# envelope. The server links the wire types without this.
base64 = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
