[package]
name = "chan-systemd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Linux systemd notify/fdstore helpers for chan."
publish = false

[lib]
name = "chan_systemd"

[target.'cfg(target_os = "linux")'.dependencies]
rustix = { workspace = true }

[target.'cfg(target_os = "linux")'.dev-dependencies]
rustix = { workspace = true, features = ["pty"] }
