[package]
name = "chan-tunnel-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Client library for chan-tunnel; embedded into `chan serve`."

[dependencies]
chan-tunnel-proto = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true, features = ["server", "server-auto", "service", "tokio"] }
pin-project-lite = { workspace = true }
rustls = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
yamux = { workspace = true }
