[package]
name = "chan-tunnel-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Client library for chan-tunnel; driven by `chan devserver`."

[dependencies]
chan-tunnel-proto = { workspace = true }

axum = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
h2 = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true, features = ["server", "server-auto", "service", "tokio"] }
rustls = { workspace = true }
thiserror = { workspace = true }
rustls-native-certs = { workspace = true }
rustls-pki-types = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
yamux = { workspace = true }
