[package]
name = "chan-tunnel-proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Wire types and control frames for chan-tunnel."

[dependencies]
base64 = { workspace = true }
bytes = { workspace = true }
h2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
http = { workspace = true }
tokio = { workspace = true }
