[package]
name = "chan"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "chan: notes app with embedded web editor."

[[bin]]
name = "chan"
path = "src/main.rs"

[features]
default = ["embeddings"]
# Forwards to chan-server / chan-drive's `embeddings` feature so a
# top-level `--no-default-features` build disables the candle stack
# all the way down. Default-on; opt out (`--no-default-features`)
# only for platforms where candle-core won't build (currently iOS).
embeddings = ["chan-server/embeddings", "chan-drive/embeddings"]
# Opt-in CUDA backend for candle. Linux only; build with
# `cargo build --release --features cuda`. Requires CUDA Toolkit
# installed on both the build host (nvcc + dev headers) and the
# runtime host (libnvrtc, libcublas, libcurand, libcudart): candle's
# cudarc dep uses dynamic-linking, not dlopen-style fallback, so
# DT_NEEDED entries land in the ELF and the binary won't launch
# without those .so files in the loader path. CHAN_DISABLE_GPU=1
# still forces CPU at runtime once the binary is loaded.
cuda = ["chan-drive/cuda", "chan-server/cuda"]

[dependencies]
chan-drive = { workspace = true, default-features = false }
chan-server = { path = "../chan-server", default-features = false }
# Pulled in directly (not just transitively through chan-server) so
# the `__mcp` subcommand can run chan-llm's MCP server in-process.
# The `mcp` feature pulls rmcp + schemars; that's the cost of paying
# the v2 ClaudeCli wiring (issue chan-llm#1) into the single static
# binary instead of shipping a separate `chan-llm-mcp` companion.
chan-llm = { workspace = true, features = ["mcp"] }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Self-upgrade flow (`chan upgrade` + the probe in `chan serve`).
# reqwest is workspace-shared so we inherit rustls + the same
# *_PROXY env-var handling install.sh expects.
serde = { workspace = true }
serde_json = { workspace = true }
# Pulled in for `chan config get`: dumps the editor preferences as
# TOML so the output round-trips with `<config>/chan/preferences.toml`.
# Writes go through chan-server's existing store helpers (see
# `EditorPrefs::save`); we never roll our own tempfile + rename here.
toml = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
sha2 = "0.10"

# Archive extraction for the upgrade flow. Linux + macOS releases
# ship as `.tar.gz`; Windows releases ship as `.zip`. Pure-Rust
# crates so the static-binary story holds.
[target.'cfg(not(target_os = "windows"))'.dependencies]
tar = { workspace = true }
flate2 = "1"

[dev-dependencies]
tempfile = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
zip = { version = "2", default-features = false, features = ["deflate"] }

# macOS auto-wires candle's Metal backend so the default release
# binary uses the GPU for embeddings without a feature flag. The
# `metal` feature is target-gated on chan-drive (objc2-metal is
# Apple-only); declaring it here keeps Linux/Windows builds clean
# while macOS gets it transparently.
[target.'cfg(target_os = "macos")'.dependencies]
chan-drive = { workspace = true, default-features = false, features = ["metal"] }
chan-server = { path = "../chan-server", default-features = false, features = ["metal"] }

# ----- packaging metadata --------------------------------------
#
# Linux .deb (cargo-deb) and .rpm (cargo-generate-rpm) bake from
# these blocks. macOS .pkg is built ad-hoc in the release
# workflow via pkgbuild; no Cargo metadata for it.

[package.metadata.deb]
maintainer = "Alexandre Fiori <fiorix@gmail.com>"
copyright = "2026 Alexandre Fiori"
license-file = ["../../LICENSE", "0"]
extended-description = """
chan is a notes app with an embedded web editor: a CLI plus an
HTTP server that serves a Svelte WYSIWYG editor for plain
markdown drives. Cross-file [[wiki-link]] autocomplete and
BM25 content search included."""
section = "utility"
priority = "optional"
assets = [
    ["target/release/chan", "usr/bin/", "755"],
    ["../../LICENSE", "usr/share/doc/chan/LICENSE", "644"],
    ["../../README.md", "usr/share/doc/chan/README.md", "644"],
]

[package.metadata.generate-rpm]
license = "Apache-2.0"
summary = "Notes app with embedded web editor"
# cargo-generate-rpm resolves asset `source` paths relative to
# the package directory (`crates/chan/`), unlike cargo-deb which
# is workspace-aware. The binary lives at the workspace target
# (`../../target/...`); we climb out of crates/chan/ to find it.
# `--target X` swaps in `target/X/release/chan` automatically.
assets = [
    { source = "../../target/release/chan", dest = "/usr/bin/chan", mode = "755" },
    { source = "../../LICENSE", dest = "/usr/share/doc/chan/LICENSE", mode = "644", doc = true },
    { source = "../../README.md", dest = "/usr/share/doc/chan/README.md", mode = "644", doc = true },
]
