# Build-time helper that pre-fetches the default embedding model
# into `crates/chan-server/resources/models/` so chan-server's
# rust-embed bundles it into the release binary. Lives in its own
# crate so dev `cargo build` does not pull a 130 MB download for
# every contributor: only `make models` (or `make build-release`)
# triggers it.

[package]
name = "fetch-models"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "chan build helper: pre-fetch the BGE-small embedding model"
publish = false

[[bin]]
name = "fetch-models"
path = "src/main.rs"

[dependencies]
chan-core = { workspace = true, features = ["embeddings"] }
anyhow = { workspace = true }
tar = { workspace = true }
zstd = { workspace = true }
